--- a/docs/messaging.adoc
+++ b/docs/messaging.adoc
@@ -23,7 +23,7 @@ This mechanism uses the https://vertx.io/docs/vertx-core/java/#event_bus[Vert.x 
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="vertx" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
+mvn quarkus:add-extension -Dextensions="vertx"
 ----
 
 You should see:
