Update kafka for RHBQ 2.13, Dev Spaces, OpenShift 4.12, OpenJDK17

--- a/docs/kafka.adoc
+++ b/docs/kafka.adoc
@@ -42,11 +42,11 @@ image::names.png[names,800]
 
 The Strimzi operator installs and manages Kafka clusters on Kubernetes. It's been pre-installed for you, so all you have to do is create a Kafka cluster inside your namespace.
 
-First, on the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], click **+Add to Project** on the left. Then, Type in `Kafka` in the search box, and click on the *Kafka*:
+First, on the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], select **+Add to Project** on the left. Then, Type in `Kafka` in the search box, and select on the *Kafka*:
 
 image::fromcat-kafka.png[names,800]
 
-These are all of the Kafka cluster elements you can install. Click on **Create**. This will open a yaml file for you to configure the cluster before it's installed. Change the name of the cluster from `my-cluster` to `names-cluster` (under the _metadata_ section of the YAML file). Leave all other values as-is, and click **Create**:
+These are all of the Kafka cluster elements you can install. Select on **Create**. This will open a yaml file for you to configure the cluster before it's installed. Change the name of the cluster from `my-cluster` to `names-cluster` (under the _metadata_ section of the YAML file). Leave all other values as-is, and select **Create**:
 
 image::createkafka.png[createkafka,800]
 
@@ -56,7 +56,7 @@ This will create a new Kafka Kubernetes object in your namespace, triggering the
 
 Follow the same process to create a Kafka _Topic_:
 
-Click **+Add to Project** on the left. Then, Type in `Topic` in the search box, and click on the *Create*:
+Select **+Add to Project** on the left. Then, Type in `Topic` in the search box, and select on the *Create*:
 
 image::createkafkatopic.png[createkafka,800]
 
@@ -65,7 +65,7 @@ We'll need to create a topic for our application to stream to and from, so in th
 * Change the _metadata > name_ value from `my-topic` to `names`.
 * Change the vale of the `strimzi.io/cluster=my-cluster` to `strimzi.io/cluster=names-cluster`
 
-Then click **Create**.
+Then select **Create**.
 
 image::topiccreate.png[topiccreate,800]
 
@@ -83,7 +83,7 @@ With Kafka installing, turn your attention back to the app. Like other exercises
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="messaging-kafka" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
+mvn quarkus:add-extension -Dextensions="messaging-kafka"
 ----
 
 You should see:
@@ -271,7 +271,7 @@ Run the following command which will build and deploy using the OpenShift extens
 
 [source,sh,role="copypaste"]
 ----
-mvn clean package -DskipTests -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs && \
+mvn clean package -DskipTests && \
 oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
 oc label dc/postgres-database app.kubernetes.io/part-of=people --overwrite && \
 oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite && \
